# WaffleDB

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  OSS_QUICKSTART.md  README.md  build_output.txt
scripts/: lint.sh  (+3 more)
waffledb-core/: BENCHMARK_RESULTS_FINAL.md  Cargo.toml  bench_output.txt  benchmark_output.txt  benchmark_results.csv  index_construction_timing.csv
waffledb-core/benches/: admin_api_bench.rs  batch_bench.rs  batch_operations_bench.rs  benchmark_compression.rs  benchmark_ef_construction_tuning.rs  benchmark_hnsw_comprehensive.rs  benchmark_insert.rs  benchmark_insert_fixed.rs  benchmark_memory.rs  benchmark_search.rs  comprehensive_benchmark.rs  concurrent_load_testing.rs  feature_benchmarks.rs  generic_bench.rs  hnsw_core_bench.rs  index_construction_timing.rs  load_testing.rs  main.rs  production_benchmarks.rs  production_stress_tests.rs  real_benchmarks.rs  search_bench.rs  sharding_bench.rs  snapshots_bench.rs  timing_utils.rs  vector_ops_bench.rs
waffledb-core/examples/: benchmark_hybrid.rs  hnsw_debug.rs
waffledb-core/src/: admin_api.rs  chaos_tests.rs  engine.rs  errors.rs  hnsw_merge.rs  lib.rs  metadata_filtering.rs  production_benchmarks.rs  security.rs  utils.rs
waffledb-core/src/admin/: mod.rs
waffledb-core/src/batch/: batch_integration.rs  batch_operations.rs  mod.rs  shard_router.rs
waffledb-core/src/buffer/: mod.rs  write_buffer.rs
waffledb-core/src/compaction/: compaction_manager.rs  compaction_tests.rs  incremental_layer_builder.rs  incremental_vectorizer.rs  mod.rs  scheduler.rs  tombstone_manager.rs
waffledb-core/src/compression/: binary_quant.rs  mod.rs  pq_adc_optimized.rs  scalar_quant.rs  tests.rs  utils.rs
waffledb-core/src/core/: errors.rs  mod.rs  performance_gates.rs  vector_type.rs
waffledb-core/src/distributed/: apply_entry.rs  cluster.rs  consistent_hash.rs  coordinator.rs  leader_election.rs  log_replication.rs  mod.rs  node.rs  orchestrator.rs  query_router.rs  raft.rs  replica_sync.rs  replication.rs  rpc.rs  scatter_gather.rs  shard_manager.rs  sharding.rs  snapshot_integration.rs
waffledb-core/src/hnsw/: builder.rs  concurrent.rs  graph.rs  insert.rs  mod.rs  pq_search.rs  search.rs  search_optimized.rs  tests.rs
waffledb-core/src/indexing/: bm25_index.rs  index_stats.rs  mod.rs  multi_vector.rs  sparse_vector.rs  sparse_vector_store.rs
waffledb-core/src/metadata/: bitmap_index.rs  btree_index.rs  filter.rs  index.rs  mod.rs  schema.rs  tests.rs
waffledb-core/src/multitenancy/: isolation.rs  isolation_tests.rs  mod.rs  namespace.rs  quota.rs  tenant.rs
waffledb-core/src/observability/: mod.rs  query_tracer.rs  stats_collector.rs  telemetry.rs
waffledb-core/src/recovery/: mod.rs  snapshots.rs
waffledb-core/src/search/: filtered_search.rs  hybrid_search.rs  hybrid_search_engine.rs  metadata_filtering.rs  mod.rs
waffledb-core/src/storage/: batch_consolidation_tests.rs  batch_wal.rs  crash_recovery.rs  incremental_snapshots.rs  index_persistence.rs  mod.rs  rocksdb.rs  snapshot.rs  snapshot_repair.rs  tests.rs  wal.rs
waffledb-core/src/vector/: distance.rs  distance_simd.rs  metric_migration.rs  metric_trait.rs  mod.rs  normalization.rs  simd_kernels.rs  tests.rs  types.rs
waffledb-core/tests/: feature_integration_tests.rs  phase3_perf_gates.rs  phase4_perf_gates.rs
waffledb-server/: Cargo.toml  build.rs
waffledb-server/proto/: waffledb.proto
waffledb-server/src/: config.rs  engine_config.rs  logging.rs  main.rs  metrics.rs  rpc.rs  snapshot.rs
waffledb-server/src/api/: grpc.rs  grpc_generated.rs  mod.rs  models.rs  query_optimization.rs  rest.rs  schema.rs
waffledb-server/tests/: tenant_isolation_tests.rs
(+82 files in other folders)
