[package]
name = "waffledb-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rocksdb = "0.21"
lru = "0.12"
bincode = "1.3"
parking_lot = "0.12"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
rayon = "1.7"

[[bench]]
name = "benchmark_search"
harness = false

[[bench]]
name = "benchmark_compression"
harness = false

[[bench]]
name = "benchmark_insert"
harness = false

[[bench]]
name = "benchmark_memory"
harness = false

[[bench]]
name = "benchmark_hnsw_comprehensive"
harness = false

[[bench]]
name = "benchmark_insert_fixed"
harness = false

[[bench]]
name = "benchmark_ef_construction_tuning"
harness = false

[[bench]]
name = "benchmark_hybrid"
harness = false

