[package]
name = "waffledb-core"
version.workspace = true
edition.workspace = true

[features]
default = []
enterprise = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rocksdb = "0.21"
lru = "0.12"
bincode = "1.3"
parking_lot = "0.12"
chrono = "0.4"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
flate2 = "1.0"
futures = "0.3"

# Observability & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.20", features = ["trace", "metrics"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20", features = ["trace", "rt-tokio"] }
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
rayon = "1.7"

[[bench]]
name = "benchmark_search"
harness = false

[[bench]]
name = "benchmark_compression"
harness = false

[[bench]]
name = "benchmark_insert"
harness = false

[[bench]]
name = "benchmark_memory"
harness = false

[[bench]]
name = "benchmark_hnsw_comprehensive"
harness = false

[[bench]]
name = "benchmark_insert_fixed"
harness = false

[[bench]]
name = "benchmark_ef_construction_tuning"
harness = false

[[bench]]
name = "benchmark_hybrid"
harness = false

[[bench]]
name = "main"
harness = false

