[package]
name = "waffledb-server"
version.workspace = true
edition.workspace = true

[dependencies]
waffledb-core = { path = "../waffledb-core" }
waffledb-distributed = { path = "../waffledb-distributed" }
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
rayon = "1.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
prometheus = "0.13"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
